Try to fix controls wrap on smaller screens

--- a/src/styl/index.styl
+++ b/src/styl/index.styl
@@ -10,6 +10,9 @@ section.main
     flex-direction column
     margin 0 auto
 
+	.controls
+		flex-wrap wrap
+
     .heading
         flex-direction column
         min-height 40vh
@@ -78,7 +81,7 @@ section.main
             padding 2px 20px 2px 5px
             font-size 1rem
 
-         .selectr-placeholder
+        .selectr-placeholder
             color #737373
 
     .content
